# Bettr-Findr

./: .gitignore  README.md  pyproject.toml  requirements.txt
findr/: __init__.py  api.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  models.py  parser.py  ranker.py  store.py
tests/: test_api.py  test_chunker.py  test_cli.py  test_embedder.py  test_indexer.py  test_indexer_incremental.py  test_parser.py  test_ranker.py  test_scaffold.py  test_store.py
