[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bettr-findr"
version = "0.1.0"
description = "A fully local semantic file finder for macOS"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
findr = "findr.cli:main"

[tool.setuptools]
packages = ["findr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
